# deepast

./: .gitignore  .gitmodules  404.html  README.md  analyze_zarr.py  index.html  sitemap.xml
.github/: CODEOWNERS
.github/workflows/: scroll-renderer.yml  vesuvius.yml
2024_gp_submissions/: index.html
2024_prizes/: index.html
assets/css/: styles.3b93ac60.css  styles.7b7d402a.css  styles.7ee8e1bd.css  styles.818a908c.css  styles.8537f981.css  styles.bef91d10.css  styles.e5fc691a.css
assets/js/: 0b2aa6b4.3b1c0af3.js  0b2aa6b4.55d2eb03.js  0b2aa6b4.95a02f2e.js  0b2aa6b4.ea55f994.js  0b2aa6b4.ff6b3781.js  0edebe6b.173de47e.js  0edebe6b.7182f51d.js  0edebe6b.7653573d.js  12545b88.457f1e66.js  12545b88.63061325.js  12545b88.c1108a51.js  12545b88.e87c104f.js  1512c9d1.195ce877.js  1512c9d1.3a7017ca.js  1512c9d1.9b08a030.js  1512c9d1.ed07f98b.js  1565a77f.545d8ff3.js  1565a77f.79dca391.js  1565a77f.a062edfa.js  1565a77f.f6fce1a1.js  165.5e4c1fe5.js  17896441.ef68cb3d.js  1d93beaa.45c0be24.js  1d93beaa.7c6e9adf.js  1d93beaa.ebf32264.js  1d93beaa.f04dbec2.js  21267082.1829146a.js  21267082.32fb409f.js  21267082.5e6c2b6c.js  21267082.9531a29c.js  22dd74f7.0356270a.js  2334.662358af.js  2764.68194c39.js  2a7193d6.03c93407.js  2a7193d6.caeff7c0.js  3042.923d710c.js  33720bbd.0718fd19.js  33720bbd.ad126607.js  33720bbd.c237d1ed.js  33720bbd.c83a4208.js  (+150 more)
background/: index.html
challenges/: index.html
community_projects/: index.html
crackle-viewer/: README.md
data/: index.html  latestPosts.json
data_akkadian/: index.html
data_english/: index.html
data_segments/: index.html
data_unicode/: index.html
donate/: index.html
faq/: index.html
fibers-dataset/fibers-dataset/: README.md  fibers-dataset-generator.py
firstletters/: index.html
foundation/obj2nml/: README.md  obj2nml.py  requirements.txt
foundation/scanning/: delta_beta.py  nearfield_limit_contour.py
foundation/scroll2zarr/: scroll_to_ome.py
foundation/scrollcase/: .gitignore  README.md  pyproject.toml  requirements.txt
foundation/scrollcase/scripts/: 02-05_scroll-sizes.ipynb  arrange-stls.py  centering_disc.py  config.yml  example_basic_case.ipynb  example_mesh_processing.ipynb  interface_plate.ipynb  interface_plate_BM18_small_tomo_stage.py  interface_plate_M-EN86.ipynb  stl-generator.py
foundation/scrollcase/src/scrollcase/: __init__.py  alignment.py  case.py  divider_utils.py  mesh.py  smallest_circle.py
get_started/: index.html
grand_prize/: index.html
grandprize/: index.html
ink-detection/: inference_timesformer.py
ink-detection/utils/: chop_and_stack.py
ink_detection/: index.html
jobs/: index.html
lego/: index.html
license/: index.html
livestream/: index.html
master_plan/: index.html
open_problem_rep/: index.html
open_source_prizes/: index.html
private_prizes/: index.html
prizes/: index.html
sam2-photogrammetry/: README.md  cc-fix.py  mask-applier.py  raw2jpg.py  segment.py  setup.py  train.py  volume.py
sam2-photogrammetry/checkpoints/: download_ckpts.sh
scroll-renderer/: setup.py
scroll-renderer/scroll_renderer/: large_mesh_to_surface.py  mesh_to_surface.py
scrollprize.org/: .gitignore  Landing_old.js  docusaurus.config.js  package-lock.json  package.json  sidebars.js
scrollprize.org/docs/: 00_landing.md  01_get_started.md  02_data.md  02_data_akkadian.md  02_data_datasets.md  02_data_english.md  02_data_fragments.md  02_data_segments.md  02_data_unicode.md  03_tutorial.md  03_tutorial_accessibility.md  03_tutorial_conversion.md  03_tutorial_linguistics.md  04_tutorial1.md  05_tutorial2.md  06_tutorial3.md  06_tutorial_VC.md  06_tutorial_thaumato.md  07_tutorial5.md  09_faq.md  10_background.md  11_livestream.md  12_grand_prize.md  13_ink_detection.md  15_challenges.md  15_winners.md  20_community_projects.md  22_firstletters.md  23_open_source_prizes.md  24_private_prizes.md  25_submissions_closed.md  26_grandprize.md  27_master_plan.md  28_2024_prizes.md  29_tutorial4.md  30_2024_gp_submissions.md  31_jobs.md  32_unrolling.mdx  32_unwrapping.mdx  33_villa_model.md  (+6 more)
scrollprize.org/plugins/: fetch-substack-posts.js
scrollprize.org/scripts/: fetchLatestPosts.js
segmentation/: index.html
segmentation/dataset_creation/: napari_zarr_rater.py  ratings.json  slices_to_zarr.py  voxelize_objs.py  zarr_rater.py
segmentation/evaluation/: README.md  environment.yml  evaluate.py
segmentation/model_optimization_framework/: README.md  evaluate_models.py  generate_trainers.py  run_inference.py  run_model_optimization.py  run_training.py
segmentation/napari_trainer/: dataset.py  inference.py  losses.py  (+8 more)
submissions_closed/: index.html
thaumato-anakalyptor/: DockerfileThaumato  README.md
thaumato-anakalyptor/ThaumatoAnakalyptor/graph_problem/: CMakeLists.txt  graph_solve.py  main.cpp  main_gpu.cpp  main_py.cpp  node_structs.cpp  node_structs.h  readme.md  solve_gpu.cu  solve_gpu.h
tutorial/: index.html
tutorial1/: index.html
tutorial2/: index.html
tutorial3/: index.html
tutorial4/: index.html
tutorial5/: index.html
tutorial_VC/: index.html
tutorial_accessibility/: index.html
tutorial_conversion/: index.html
tutorial_linguistics/: index.html
tutorial_thaumato/: index.html
unrolling/: index.html
unwrapping/: index.html
vesuvius/: __init__.py  debug_imports.py  debug_volume_fsspec.py  setup.py  test_direct_zarr.py  test_vc_dataset_fsspec.py  test_volume_comparison.py  test_volume_loading.py  utils.py  vesuvius.py
villa_model/: index.html
(+268 files in other folders)
